--- a/NOTHING/index.html
+++ b/NOTHING/index.html
@@ -71,8 +71,8 @@
   background-size: cover; /* Resize the background image to cover the entire container */
   z-index: 10;
   bottom: 10%; 
-  border: 1px solid black; 
-}
+/*  border: 1px solid black; 
+*/}
 
 /*  #hex {
     font-family:   times new roman;
@@ -87,7 +87,7 @@
   height:100vh;
   width:60vw;
   float:  left;
-  border:  1px solid black;
+/*  border:  1px solid black;*/
 }
 
 
@@ -129,6 +129,7 @@
     padding-right: 50px;
     position:  fixed;
     width:100px;
+    z-index: 20;
   }
 
   #moon {
@@ -302,10 +303,8 @@
         $('#sun').css("fill", "white");
         $('#all').css("background-color", "black");
         $('#all').css("color", "white");
-        $('#all').css("border", "1px solid white");
         $('#checkerboard').css("background-color", "black");
         $('.draggable').css("border", "1px solid white");
-        $('#spectrum-container').css("border", "1px solid white")
       });
 
                 $(".draggable").draggable();
