--- a/NOTHING/index.html
+++ b/NOTHING/index.html
@@ -65,14 +65,17 @@
   width:  100%;
   height: 2%;
   position:  fixed;
-  background-image:  url("img/spectrum.png");
+/*  background-image:  url("img/spectrum.png");*/
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
   background-size: cover; /* Resize the background image to cover the entire container */
-  z-index: 10;
+  z-index: 20;
   bottom: 10%; 
 /*  border: 1px solid black; 
 */}
+
+  #picker {
+  }
 
 /*  #hex {
     font-family:   times new roman;
@@ -155,7 +158,7 @@
     background-color: white;
 /*    background-image:  url('https://upload.wikimedia.org/wikipedia/commons/thumb/7/70/Checkerboard_pattern.svg/2048px-Checkerboard_pattern.svg.png') ;*/
     overflow-y:  hidden;
-    overflow-x: scroll;
+
   }
 
 
@@ -233,12 +236,11 @@
 
    
 
-   <div id="spectrum-container"></div>
+   <div id="spectrum-container">    <div id="picker" style="height: 100%; width: 100%; z-index: 30;"></div></div>
 
 
 
-<!--     <div id="picker" style="margin-bottom: 10vh; border: 1px solid black; width:100vw; 
-    bottom: 30px; position: fixed;"></div> -->
+
 <!--     <div id="hex"></div>
  -->  
     <script type="text/javascript" src="script.js"></script>
@@ -250,7 +252,7 @@
 
 <div id="checkerboard">
 
-    <div class="draggable" class="black" style="background-color: #000000;"></div>
+    <div class="draggable" class="black" id="first" style="background-color: #000000;"></div>
     <div class="draggable" class="white" style="background-color: #ffffff;"></div>
     <div class="draggable" class="black" style="background-color: #000000;"></div>
     <div class="draggable" class="white" style="background-color: #ffffff;"></div>
