--- a/NOTHING/index.html
+++ b/NOTHING/index.html
@@ -71,10 +71,12 @@
   background-size: cover; /* Resize the background image to cover the entire container */
   z-index: 20;
   bottom: 10%; 
-/*  border: 1px solid black; 
-*/}
+  border: 1px solid black; 
+}
 
   #picker {
+    width:  100%;
+    height:  100%;
   }
 
 /*  #hex {
@@ -103,7 +105,7 @@
   }
 
 
-  .draggable {
+  .draggable, .draggable_black{
     width: 33.33%;
     height: 20%;
     z-index:  2;
@@ -236,7 +238,7 @@
 
    
 
-   <div id="spectrum-container">    <div id="picker" style="height: 100%; width: 100%; z-index: 30;"></div></div>
+   <div id="spectrum-container">    <div id="picker" style=""></div></div>
 
 
 
@@ -252,29 +254,29 @@
 
 <div id="checkerboard">
 
-    <div class="draggable" class="black" id="first" style="background-color: #000000;"></div>
+    <div class="draggable_black" class="black" style="background-color: #000000;"></div>
     <div class="draggable" class="white" style="background-color: #ffffff;"></div>
-    <div class="draggable" class="black" style="background-color: #000000;"></div>
+    <div class="draggable_black" class="black" style="background-color: #000000;"></div>
     <div class="draggable" class="white" style="background-color: #ffffff;"></div>
-    <div class="draggable" class="black" style="background-color: #000000;"></div>
+    <div class="draggable_black" class="black" style="background-color: #000000;"></div>
     <div class="draggable" class="white" style="background-color: #ffffff;"></div>
-    <div class="draggable" class="black" style="background-color: #000000;"></div>
+    <div class="draggable_black" class="black" style="background-color: #000000;"></div>
     <div class="draggable" class="white" style="background-color: #ffffff;"></div>
-    <div class="draggable" class="black" style="background-color: #000000;"></div>
+    <div class="draggable_black" class="black" style="background-color: #000000;"></div>
     <div class="draggable" class="white" style="background-color: #ffffff;"></div>
-    <div class="draggable" class="black" style="background-color: #000000;"></div>
+    <div class="draggable_black" class="black" style="background-color: #000000;"></div>
     <div class="draggable" class="white" style="background-color: #ffffff;"></div>
-    <div class="draggable" class="black" style="background-color: #000000;"></div>
+    <div class="draggable_black" class="black" style="background-color: #000000;"></div>
     <div class="draggable" class="white" style="background-color: #ffffff;"></div>
-    <div class="draggable" class="black" style="background-color: #000000;"></div>
+    <div class="draggable_black" class="black" style="background-color: #000000;"></div>
     <div class="draggable" class="white" style="background-color: #ffffff;"></div>
-    <div class="draggable" class="black" style="background-color: #000000;"></div>
+    <div class="draggable_black" class="black" style="background-color: #000000;"></div>
     <div class="draggable" class="white" style="background-color: #ffffff;"></div>
-    <div class="draggable" class="black" style="background-color: #000000;"></div>
+    <div class="draggable_black" class="black" style="background-color: #000000;"></div>
     <div class="draggable" class="white" style="background-color: #ffffff;"></div>
-    <div class="draggable" class="black" style="background-color: #000000;"></div>
+    <div class="draggable_black" class="black" style="background-color: #000000;"></div>
     <div class="draggable" class="white" style="background-color: #ffffff;"></div>
-    <div class="draggable" class="black" style="background-color: #000000;"></div>
+    <div class="draggable_black" class="black" style="background-color: #000000;"></div>
     <div class="draggable" class="white" style="background-color: #ffffff;"></div>
 
 </div>
@@ -310,6 +312,7 @@
       });
 
                 $(".draggable").draggable();
+                $(".draggable_black").draggable();
 
 
     });
