--- a/NOTHING/index.html
+++ b/NOTHING/index.html
@@ -71,7 +71,7 @@
   background-size: cover; /* Resize the background image to cover the entire container */
   z-index: 20;
   bottom: 10%; 
-  border: 1px solid black; 
+  overflow:  hidden;
 }
 
   #picker {
