--- a/NOTHING/index.html
+++ b/NOTHING/index.html
@@ -109,8 +109,8 @@
     width: 33.33%;
     height: 20%;
     z-index:  2;
-    border:  1px solid black;
-    float:  left;
+/*    border:  1px solid black;
+*/    float:  left;
   }
 
   .draggable:hover {
