--- a/PORTFOLIO_SITE/examples/index.html
+++ b/PORTFOLIO_SITE/examples/index.html
@@ -14,9 +14,9 @@
 	<body>
 
 <div id="user-side">
-		<div id="title">
+		<!-- <div id="title">
 			Mari is a graphic designer and <br>creative coder based in NYC.
-		</div>
+		</div> -->
 
         
 </div>
